--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Vespertine</title>
+    <title><%= full_title(yield(:title)) %></title>
+  	<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
+  	<meta name="theme-color" content="#ff5757" />
     <%= csrf_meta_tags %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= render 'partials/themes' %>
   </head>
 
   <body>
+
+		<% flash.each do |message_type, message| %>
+		  <% if message_type != "timedout" %>
+		  <div class="alert-<%= message_type %>">
+		    <div class="alert">
+		      <%= message %>
+		    </div>
+		  </div>
+		  <% end %>
+		<% end %>
+
+    <% if user_signed_in? %>
+      <%= render 'partials/header' %>
+    <% end %>
+
     <%= yield %>
+
+    <%= render 'partials/footer' %>
+    
   </body>
 </html>
